--- a/src/HRSystem.Application/HRSystem.Application.csproj
+++ b/src/HRSystem.Application/HRSystem.Application.csproj
@@ -16,4 +16,8 @@
 	<ItemGroup>
 		<ProjectReference Include="..\HRSystem.Domain\HRSystem.Domain.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Requests\LeaveRequests\Common\" />
+	</ItemGroup>
 </Project>
