--- a/src/HRSystem.Api/Properties/launchSettings.json
+++ b/src/HRSystem.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5134"
+      "applicationUrl": "http://0.0.0.0:5134"
     },
     "https": {
       "commandName": "Project",
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7267;http://localhost:5134"
+      "applicationUrl": "https://0.0.0.0:7267;http://0.0.0.0:5134"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -45,7 +45,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64796",
+      "applicationUrl": "http://0.0.0.0:64796",
       "sslPort": 44327
     }
   }
