--- a/src/HRSystem.Api/appsettings.Development.json
+++ b/src/HRSystem.Api/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5134"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
